--- a/c/mpi/one-sided/Makefile.am
+++ b/c/mpi/one-sided/Makefile.am
@@ -8,7 +8,7 @@ SUFFIXES = .cu .cpp
 	mv $@.ii $@
 
 one_sideddir = $(pkglibexecdir)/mpi/one-sided
-one_sided_PROGRAMS = osu_acc_latency osu_get_bw osu_get_mbw osu_get_latency osu_put_bibw osu_put_bw osu_put_latency
+one_sided_PROGRAMS = osu_acc_latency osu_get_bw osu_get_mbw osu_get_latency osu_get_multi_lat osu_put_bibw osu_put_bw osu_put_latency
 
 if MPI3_LIBRARY
     one_sided_PROGRAMS += osu_get_acc_latency osu_fop_latency osu_cas_latency
@@ -35,6 +35,7 @@ osu_put_bibw_SOURCES = osu_put_bibw.c $(UTILITIES)
 osu_get_latency_SOURCES = osu_get_latency.c $(UTILITIES)
 osu_get_bw_SOURCES = osu_get_bw.c $(UTILITIES)
 osu_get_mbw_SOURCES = osu_get_mbw.c $(UTILITIES)
+osu_get_multi_lat_SOURCES = osu_get_multi_lat.c $(UTILITIES)
 osu_acc_latency_SOURCES = osu_acc_latency.c $(UTILITIES)
 osu_fop_latency_SOURCES = osu_fop_latency.c $(UTILITIES)
 osu_cas_latency_SOURCES = osu_cas_latency.c $(UTILITIES)
